--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,21 @@
 server.servlet.context-path=/spring-boot-jenkins
-
 server.port=8080
 
-# for database config you can reference to https://github.com/yewin-mm/spring-boot-sample-crud
-# you can also reference in here, https://github.com/yewin-mm/spring-boot-app-instruction#prepare-database-setting
 #============================================== DB Config ==============================================#
-##### add connection string link to connect database
+# ✅ UTILISATION DE H2 (BASE DE DONNÉES EN MÉMOIRE) - POUR LA DÉMO
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
+# Configuration JPA pour H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 
-### for connecting to your db which running in your local machine
-#spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_jpa_docker_jenkins_pipeline
-### for running this application as container (connect to my local mysql db container, ref - https://github.com/yewin-mm/spring-boot-jpa-docker)
-spring.datasource.url=jdbc:mysql://yw_mysql:3306/spring_boot_jpa_docker_jenkins_pipeline
-
-
-### for running this application as container, you need to add container name to connect mysql db container name
-# if you run your project in your local IDE, you need to use above datasource url.
-## Ref about creating mysql container -> https://github.com/yewin-mm/mysql-docker-container
-## Ref about simple spring boot jpa with docker -> https://github.com/yewin-mm/spring-boot-jpa-docker
-#spring.datasource.url=jdbc:mysql://mysql_db:3306/spring_boot_jpa_docker
-
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+# Activer la console H2 (pour tester)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 #============================================== Connection pool Configs ==============================================#
 spring.datasource.hikari.connection-timeout=30000
@@ -33,3 +24,7 @@ spring.datasource.hikari.maximum-pool-size=7
 spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.auto-commit=true
+
+#============================================== Logging ==============================================#
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
